force-app/main/default/objects/Item__c/fields/All_Copies__c.field-meta.xml
<CustomField>
    <fullName>All_Copies__c</fullName>
    <defaultValue>1</defaultValue>
    <label>All Copies</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>