force-app/main/default/objects/Item__c/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <formula>All_Copies__c  -  Items_in_use__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>