force-app/main/default/objects/Item__c/fields/Items_in_use__c.field-meta.xml
<CustomField>
    <fullName>Items_in_use__c</fullName>
    <label>Items in use</label>
    <summaryFilterItems>
        <field>Rental__c.Status__c</field>
        <operation>equals</operation>
        <value>reserved, borrowed, delayed</value>
    </summaryFilterItems>
    <summaryForeignKey>Rental__c.Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>