force-app/main/default/objects/Item__c/fields/Lector__c.field-meta.xml
<CustomField>
    <fullName>Lector__c</fullName>
    <label>Lector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>