force-app/main/default/objects/Item__c/recordTypes/Audiobook.recordType-meta.xml
<RecordType>
    <fullName>Audiobook</fullName>
    <active>true</active>
    <label>Audiobook</label>
</RecordType>