force-app/main/default/objects/Item__c/recordTypes/Magazine.recordType-meta.xml
<RecordType>
    <fullName>Magazine</fullName>
    <active>true</active>
    <label>Magazine</label>
</RecordType>