force-app/main/default/objects/Item__c/validationRules/check_number_of_copies_greater_than_all.validationRule-meta.xml
<ValidationRule>
    <fullName>check_number_of_copies_greater_than_all</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Copies__c &lt; copies_in_use__c</errorConditionFormula>
    <errorMessage>All copies have been rented.</errorMessage>
</ValidationRule>