force-app/main/default/objects/Item__c/listViews/Available_Items.listView-meta.xml
<ListView>
    <fullName>Available_Items</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Genre__c</columns>
    <columns>Edition__c</columns>
    <columns>Release_Year__c</columns>
    <columns>All_Copies__c</columns>
    <columns>Available_Copies__c</columns>
    <columns>Lector__c</columns>
    <filterScope>Mine</filterScope>
    <label>Available Items</label>
</ListView>