force-app/main/default/objects/Item__c/listViews/Borrowed_Items.listView-meta.xml
<ListView>
    <fullName>Borrowed_Items</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Borrowed Items</label>
</ListView>